# single_threaded_web_server

./: .gitignore  CMakeLists.txt  Readme.md
Networking/: request.cpp  request.h  response.cpp  response.h  server.cpp  server.h
config/: server.conf
src/: main.cpp
utils/: config.cpp  config.h  globals.cpp  globals.h  log.cpp  log.h  mappings.cpp  mappings.h
www/static/style/: style.css
www/template/: about.html  index.html  test.html
